<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.iict.sym_labo4.BleActivity">

    <ScrollView
        android:id="@+id/ble_operation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TODO vous placerez dans ce layout toutes les vues nécessaire aux intéractions avec le périphérique BLE -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ble_buttons_clicked_label" />

                <TextView
                        android:id="@+id/button_click_count_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_weight="0"
                        tools:text="100" />

                <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button"
                        android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ble_temperature_label" />

                <TextView
                        android:id="@+id/temperature_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        tools:text="27.6" />

                <Button
                        android:id="@+id/read_temperature_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ble_read_button" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ble_datetime_label" />

                <TextView
                        android:id="@+id/time_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        tools:text="12.01.2020 08:30:31" />

                <Button
                        android:id="@+id/write_time_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ble_write_button" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/integer_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/ble_integer_input"
                        android:inputType="numberSigned" />

                <Button
                        android:id="@+id/write_integer_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ble_write_button" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
            android:id="@+id/ble_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone">

        <ListView
                android:id="@+id/ble_scanresults"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        <TextView
                android:id="@+id/ble_scanresults_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/ble_empty" />

    </RelativeLayout>

</RelativeLayout>
